--- a/views/leaverequest.ejs
+++ b/views/leaverequest.ejs
@@ -14,21 +14,29 @@
             background: #f0f2f5;
         }
 
+        /* .attendance-header {
+            background: linear-gradient(135deg, #171d22 0%, #00f2fe 100%);
+            padding: 28px;
+            text-align: center;
+            color: #fff;
+        } */
+
         .card {
             border-radius: 20px;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
         }
 
         .header {
-            background: linear-gradient(135deg, #3b82f6, #06b6d4);
+           background: linear-gradient(135deg, #1e2a31, #02453d);
             border-radius: 20px 20px 0 0;
             color: white;
             padding: 30px;
             text-align: center;
         }
+       
 
         .btn-custom {
-            background: #3b82f6;
+            background-color: #02453d;
             color: white;
             border-radius: 12px;
             padding: 10px 20px;
@@ -46,7 +54,7 @@
     <div class="container mt-5">
 
         <div class="card mx-auto" style="max-width: 700px;">
-            <div class="header">
+            <div class="header attendance-header">
                 <h2>Leave Request Form</h2>
                 <p>Submit your leave details below</p>
             </div>
