--- a/views/Attendance.ejs
+++ b/views/Attendance.ejs
@@ -1,5 +1,32 @@
 <%- include('Layout/header'); %>
+   <style>
+       
 
+        table tbody tr {
+            transition: transform 0.2s ease;
+            border-radius: 100px !important;
+        }
+
+        table tbody tr:hover {
+            transform: translateX(6px);
+            cursor: pointer;
+        }
+    .action-btn {
+      padding: 6px 9px !important;
+      /* both equal */
+      /* display: flex; */
+      align-items: center;
+      justify-content: center;
+      width: 35px;
+      /* same fixed size */
+      height: 35px;
+    }
+
+    .action-btn i {
+      font-size: 14px;
+      line-height: 0;
+    }
+    </style>
   <!-- Main Content -->
   <div class="main-content">
 
@@ -164,14 +191,14 @@
       <td>${e.check_out}</td>
       <td>${e.status}</td>
       <td>
-        <button class="btn btn-primary btn-sm showApplicationBtn" 
+        <button class="btn btn-primary btn-sm action-btn showApplicationBtn" 
                 data-bs-toggle="modal" 
                 data-bs-target="#updateAttendanceModal"
                 data-id="${e._id}">
           <i class="bi bi-pencil"></i>
         </button>
 
-        <button class="btn btn-danger btn-sm deleteApplicationBtn" 
+        <button class="btn btn-danger btn-sm action-btn deleteApplicationBtn" 
                 data-id="${e._id}">
           <i class="bi bi-trash"></i>
         </button>
