--- a/views/Leave_Request.ejs
+++ b/views/Leave_Request.ejs
@@ -1,6 +1,17 @@
 <%- include('Layout/header'); %>
-  <style>
-  </style>
+    <style>
+       
+
+        table tbody tr {
+            transition: transform 0.2s ease;
+            border-radius: 100px !important;
+        }
+
+        table tbody tr:hover {
+            transform: translateX(6px);
+            cursor: pointer;
+        }
+    </style>
   <div class="main-content">
     <div class="topbar rounded-4 mb-4 d-flex justify-content-between align-items-center shadow-sm px-3">
       <h5>Leave Requests</h5>
@@ -63,8 +74,10 @@
         const leavereauest = document.getElementById("leavereauest")
         const response = await fetch("http://localhost:3000/getleaverequest");
         const data = await response.json();
+        console.log(data);
+
         data.forEach((e, index) => {
-          // console.log(e);
+          console.log(e, "lo");
           const formatDate = (dateString) => {
             const date = new Date(dateString);
             return date.toLocaleDateString('en-IN', { year: 'numeric', month: '2-digit', day: '2-digit' }).split('/').reverse().join('-');
@@ -73,7 +86,7 @@
           leavereauest.innerHTML += `
               <tr>
                 <td>${index + 1}</td>
-                <td>${e.employee_id.first_name} ${e.employee_id.last_name}</td>
+                <td>${e.employee_id.first_name +" "+ e.employee_id.last_name}</td>
                 <td>${e.leave_type}</td>
                 <td>${formatDate(e.from_date)}</td>
                 <td>${formatDate(e.to_date)}</td>
