--- a/views/viewJobpostData.ejs
+++ b/views/viewJobpostData.ejs
@@ -1,5 +1,34 @@
 <%- include('Layout/header'); %>
-<section>
+    <style>
+       
+
+        table tbody tr {
+            transition: transform 0.2s ease;
+            border-radius: 100px !important;
+        }
+
+        table tbody tr:hover {
+            transform: translateX(6px);
+            cursor: pointer;
+        }
+        
+    .action-btn {
+      padding: 6px 9px !important;
+      /* both equal */
+      /* display: flex; */
+      align-items: center;
+      justify-content: center;
+      width: 55px;
+      /* same fixed size */
+      height: 35px;
+    }
+
+    .action-btn i {
+      font-size: 14px;
+      line-height: 0;
+    }
+    </style>
+    <section>
         <div class="main-content">
             <div class="container py-4 flex-grow-1">
                 <div class="topbar rounded-4 mb-4 d-flex justify-content-between align-items-center shadow-sm p-3">
@@ -37,7 +66,7 @@
         </div>
     </section>
 
- 
+
 
     <div class="modal fade" id="showApplicationModal" tabindex="-1" aria-labelledby="showApplicationModalLabel"
         aria-hidden="true">
@@ -96,8 +125,8 @@
                         <td>${e.email}</td>
                         <td>${e.position}</td>
                         <td>${e.resume}</td>
-                        <td><button class="text-center btn btn-primary btn-sm showApplicationBtn" data-bs-toggle="modal" data-bs-target="#showApplicationModal" id="edit" data-id="${e._id}">Edit</button></td>
-                        <td><button class="text-center btn btn-danger btn-sm delateApplicationBtn" id="delete" data-id="${e._id}">Delete</button></td>
+                        <td><button class="btn btn-primary btn-sm action-btn showApplicationBtn" data-bs-toggle="modal" data-bs-target="#showApplicationModal" id="edit" data-id="${e._id}">Edit</button></td>
+                        <td><button class="btn btn-danger btn-sm action-btn delateApplicationBtn" id="delete" data-id="${e._id}">Delete</button></td>
                     </tr>`
                 });
 
@@ -122,7 +151,7 @@
 
 
                         const singleresponse = await singlefetch.json();
-                        console.log(singleresponse,"singleresponse");
+                        console.log(singleresponse, "singleresponse");
 
                         document.getElementById("editId").value = singleresponse._id;
                         document.getElementById("editName").value = singleresponse.name;
@@ -209,4 +238,4 @@
         });
     </script>
 
-<%- include('Layout/footer'); %>
+    <%- include('Layout/footer'); %>
