--- a/views/viewJobpostData.ejs
+++ b/views/viewJobpostData.ejs
@@ -126,7 +126,7 @@
                         <td>${e.position}</td>
                         <td>${e.resume}</td>
                         <td><button class="btn btn-primary btn-sm action-btn showApplicationBtn" data-bs-toggle="modal" data-bs-target="#showApplicationModal" id="edit" data-id="${e._id}">Edit</button></td>
-                        <td><button class="btn btn-danger btn-sm action-btn delateApplicationBtn" id="delete" data-id="${e._id}">Delete</button></td>
+                        <td><button class="btn btn-danger btn-sm action-btn delateApplicationBtn rounded-2" id="delete" data-id="${e._id}">Delete</button></td>
                     </tr>`
                 });
 
